Second attempt to fix searchbar on mobile device

--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ p {
   align-items: center;
 }
 .searchForm {
-  width: 300px;
+  width: 250px;
 }
 .form-control {
   display: inline-block;
@@ -70,7 +70,7 @@ p {
   background: none;
   opacity: 0.7;
   position: relative;
-  right: 45px;
+  right: 35px;
 }
 .locationIcon {
   width: 35px;
